--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "3d-rendering",
+  "name": "3d-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://salatielosorno.github.io/3d-demo",
   "dependencies": {
+    "@react-three/drei": "9.47.1",
+    "@react-three/fiber": "8.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "three": "0.147.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
